change db to mysql ( planetscale )

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
     "lint": "next lint",
     "start": "next start"
   },
