--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ NEXTAUTH_URL=http://localhost:3000
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+
+# Next Auth Spotify Provider
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
